<resources>
    <string name="app_name">Pahta</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="label_settings">Change favorite genres:</string>
    <string name="btn_settings">Edit favorites</string>
    <string name="label2_settings">Switch current theme:</string>
    <string name="label_light">Light</string>
    <string name="label_dark">Dark</string>
    <string name="label3_settings">About:</string>
    <string name="label4_settings">Clear favorite genres:</string>
    <string name="label5_settings">Clear</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>